// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input disabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-radius: 4px;
  border: 1px solid #DADADA;
  box-shadow: none;
  caret-color: #757575;
  color: #757575;
  display: block;
  font-size: 14px;
  height: 36px;
  line-height: 14;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 11px;
  padding-bottom: 11px;
  margin-bottom: 64px;
  outline: none;
}

.c0:disabled {
  color: #999999;
  background-color: #EBEBEB;
  cursor: not-allowed;
}

<input
  className="c0"
  disabled={true}
  type="text"
/>
`;

exports[`Input placeholder 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-radius: 4px;
  border: 1px solid #DADADA;
  box-shadow: none;
  caret-color: #757575;
  color: #757575;
  display: block;
  font-size: 14px;
  height: 36px;
  line-height: 14;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 11px;
  padding-bottom: 11px;
  margin-bottom: 64px;
  outline: none;
}

.c0:disabled {
  color: #999999;
  background-color: #EBEBEB;
  cursor: not-allowed;
}

<input
  className="c0"
  disabled={false}
  placeholder="test"
  type="text"
/>
`;

exports[`Input renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-radius: 4px;
  border: 1px solid #DADADA;
  box-shadow: none;
  caret-color: #757575;
  color: #757575;
  display: block;
  font-size: 14px;
  height: 36px;
  line-height: 14;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 11px;
  padding-bottom: 11px;
  margin-bottom: 64px;
  outline: none;
}

.c0:disabled {
  color: #999999;
  background-color: #EBEBEB;
  cursor: not-allowed;
}

<input
  className="c0"
  disabled={false}
  type="text"
/>
`;
